# StellaraeSecure

./: .env.compose.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/instructions/: *.instructions.md
.github/workflows/: admin-ci.yml  backend-ci.yml  containers-ci.yml  docs-pages.yml  openapi-ci.yml  release-images.yml  rust-clippy.yml  security-ci.yml
2fa/: .env.example  Cargo.toml  Dockerfile  README.md  audit.toml
2fa/src/: app.rs  config.rs  error.rs  main.rs
admin/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
admin/docs/: auth-handoff-contract.md
admin/e2e/: smoke.spec.ts
admin/src/: App.css  App.integration.test.tsx  App.tsx  index.css
admin/src/api/: oauth2.ts
admin/src/auth/: AuthContext.tsx  RequirePermissionRoute.tsx  RequireSessionRoute.tsx  routeGuards.test.tsx
admin/src/hooks/: useApiAction.test.tsx  useApiAction.ts
admin/src/layout/: AppShell.tsx
admin/src/lib/: api.ts  apiErrors.test.ts  apiErrors.ts  authFlowState.ts  authHandoff.test.ts  authHandoff.ts  config.ts
admin/src/pages/: AdminHomePage.test.tsx  AdminHomePage.tsx  AuthCallbackPage.tsx  LoginPage.tsx  NotFoundPage.tsx  PanelHomePage.test.tsx  PanelHomePage.tsx
admin/src/types/: auth.ts  oauth2.ts
docs/: README.md  api.html  getting-started.html  index.html  operations.html  security-model.html  self-hosting.html  styles.css
docs/openapi/: oauth2.openapi.yaml  staffdb.openapi.yaml  twofa.openapi.yaml
oauth2/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  ROLLOUT.md
oauth2/migrations/: 0001_initial.sql
oauth2/src/: error.rs  lib.rs  logger.rs  main.rs  models.rs  staffdb.rs  state.rs  twofa.rs
oauth2/src/api/: routes.rs
oauth2/src/config/: mod.rs
oauth2/src/db/: migrations.rs
oauth2/tests/: staffdb_integration.rs
scripts/ops/: backup.sh  restore.sh
scripts/release/: validate-tag.sh
staffdb/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yml
staffdb/src/: error.rs  lib.rs  logger.rs  main.rs
staffdb/src/api/: middleware.rs  mod.rs
staffdb/src/api/handlers/: accounts.rs  audit.rs  mod.rs  rbac.rs  roles.rs  twofa.rs
staffdb/src/auth/: hsk.rs  mod.rs  password.rs  service_auth.rs  totp.rs
staffdb/src/config/: mod.rs  security.rs
staffdb/src/db/: migrations.rs  mod.rs  pool.rs  repository.rs
staffdb/src/models/: mod.rs
staffdb/tests/: integration_test.rs
